stylesheets/tags.css
.listbox {
    background-clip: padding-box;
    background-color: #FFFFFF;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 6px 6px 6px 6px;
    float: left;
    left: 0;
    list-style: none outside none;
    margin: 2px 0 0;
    min-width: 160px;
    padding: 10px;
    top: 100%;
    z-index: 1000;
}

.Ghost {
    display: none;
}

.btn-group input[type="text"] {
	margin : 0;
}

/**************** Tags ****************/

.Tags {
	font-size: 8pt;
	font-style: italic;
	color: #b4b252;
	display: inline;
	line-height: 170%;
}

.TagsSummary {
	white-space: nowrap;
}

.Tag {
	display: inline;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	
	border: 1px solid #deddb2;
	background: #ebebd1;
	
	padding: 1px 3px 1px 3px;
	margin: 0px 2px;
}

.Tag .Delete {
	font-size: 6pt;
	display: inline;
	padding-left: 0px;
	padding-right: 8px;
}

.Tag .Delete a {
	padding-left: 1px;
	padding-right: 0px;
}

/* default tag */

.Tag a {
	padding-left: 4px;
	padding-right: 4px;
	display: inline;
}
.Tag a:link 	{ color: #bdb947; text-decoration: none; }
.Tag a:visited	{ color: #bdb947; text-decoration: none; }
.Tag a:hover 	{ color: #bdb947; text-decoration: none; }
.Tag a:active 	{ color: #bdb947; text-decoration: none; }

a.DefaultTag {
  /* padding-left: 4px;
  padding-right: 4px;
  display: inline; */
  background: #ebebd1;
  border: 1px solid #deddb2;
}
a.DefaultTag:link   { color: #bdb947; text-decoration: none; }
a.DefaultTag:visited  { color: #bdb947; text-decoration: none; }
a.DefaultTag:hover  { color: #bdb947; text-decoration: none; }
a.DefaultTag:active   { color: #bdb947; text-decoration: none; }

/* release */

/*
.ReleaseTag {
	border: 1px solid #b2cdde;
	background: #d1e1eb;
}
.ReleaseTag a:link 		{ color: #488fbc; }
.ReleaseTag a:visited	{ color: #488fbc; }
.ReleaseTag a:hover 	{ color: #488fbc; }
.ReleaseTag a:active 	{ color: #488fbc; }
*/

a.ReleaseTag {
  border: 1px solid #b2cdde;
  background: #d1e1eb;
}
a.ReleaseTag:link    { color: #488fbc; }
a.ReleaseTag:visited { color: #488fbc; }
a.ReleaseTag:hover   { color: #488fbc; }
a.ReleaseTag:active  { color: #488fbc; }

/* issue type */

.IssuetypeTag {
	border: 1px solid #c8c8c8;
	background: #dedede;
}
.IssuetypeTag a:link 	{ color: #828282; }
.IssuetypeTag a:visited	{ color: #828282; }
.IssuetypeTag a:hover 	{ color: #828282; }
.IssuetypeTag a:active 	{ color: #828282; }

a.IssuetypeTag {
  border: 1px solid #c8c8c8;
  background: #dedede;
}
a.IssuetypeTag:link  { color: #828282; }
a.IssuetypeTag:visited { color: #828282; }
a.IssuetypeTag:hover   { color: #828282; }
a.IssuetypeTag:active  { color: #828282; }

/* red */

.RedTag {
	border: 1px solid #deb2b2;
	background: #ebd1d1;
}

.RedTag a:link 		{ color: #bc4848; }
.RedTag a:visited	{ color: #bc4848; }
.RedTag a:hover 	{ color: #bc4848; }
.RedTag a:active 	{ color: #bc4848; }

a.RedTag {
  border: 1px solid #deb2b2;
  background: #ebd1d1;
}
a.RedTag:link    { color: #bc4848; }
a.RedTag:visited { color: #bc4848; }
a.RedTag:hover   { color: #bc4848; }
a.RedTag:active  { color: #bc4848; }

/* green */

a.GreenTag {
	border: 1px solid #b2deb7;
	background: #d1ebd4;
}
a.GreenTag:link 	 { color: #48bc56; }
a.GreenTag:visited { color: #48bc56; }
a.GreenTag:hover 	 { color: #48bc56; }
a.GreenTag:active  { color: #48bc56; }

.GreenTag {
  border: 1px solid #b2deb7;
  background: #d1ebd4;
}
.GreenTag a:link  { color: #48bc56; }
.GreenTag a:visited { color: #48bc56; }
.GreenTag a:hover   { color: #48bc56; }
.GreenTag a:active  { color: #48bc56; }

/* grey */

a.GreyTag {
	border: 1px solid #c8c8c8;
	background: #dedede;
}
a.GreyTag:link 	{ color: #828282; }
a.GreyTag:visited	{ color: #828282; }
a.GreyTag:hover 	{ color: #828282; }
a.GreyTag:active 	{ color: #828282; }

.GreyTag {
  border: 1px solid #c8c8c8;
  background: #dedede;
}
.GreyTag a:link   { color: #828282; }
.GreyTag a:visited  { color: #828282; }
.GreyTag a:hover  { color: #828282; }
.GreyTag a:active   { color: #828282; }

/* purple */

.PurpleTag {
	border: 1px solid #bcb2de;
	background: #d7d1eb;
}
.PurpleTag a:link 		{ color: #6348bc; }
.PurpleTag a:visited	{ color: #6348bc; }
.PurpleTag a:hover 		{ color: #6348bc; }
.PurpleTag a:active 	{ color: #6348bc; }

a.PurpleTag {
  border: 1px solid #bcb2de;
  background: #d7d1eb;
}
a.PurpleTag:link     { color: #6348bc; }
a.PurpleTag:visited  { color: #6348bc; }
a.PurpleTag:hover    { color: #6348bc; }
a.PurpleTag:active   { color: #6348bc; }

/**************** Tag Controls ****************/


.TagAddition input[type="text"] {
	width : 100px;
}

.TagAddition .Suggestion {
	display: block;
	margin: 4px;
}

.TagAddition .Suggestion a {
	padding: 0px;
	margin: 5px;
	text-indent: 5px;
	font-size: 8pt;
}

.TagAddition .Suggestion a:link 	{ color: #999999; }
.TagAddition .Suggestion a:visited	{ color: #999999; }
.TagAddition .Suggestion a:hover 	{ color: #608060; }
.TagAddition .Suggestion a:active 	{ color: #999999; }

